--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tt-react-backendless",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/tt-react-backendless",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
   }
