--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tt-react-backendless",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/tt-react-backendless",
+  "homepage": "https://mikhail2574.github.io/tt-react-backendless",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
